<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.testofchemistry.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/input_name"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp" />

                <TextView
                    android:id="@+id/total_score_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_score"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                style="@style/textTheme"
                android:text="@string/question_type_one" />

            <TextView
                style="@style/textTheme"
                android:text="@string/question_one" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/button_1_a"
                    style="@style/buttonTheme"
                    android:text="@string/question_one_a" />

                <RadioButton
                    android:id="@+id/button_1_b"
                    style="@style/buttonTheme"
                    android:text="@string/question_one_b" />

                <RadioButton
                    android:id="@+id/button_1_c"
                    style="@style/buttonTheme"
                    android:text="@string/question_one_c" />

                <RadioButton
                    android:id="@+id/button_1_d"
                    style="@style/buttonTheme"
                    android:text="@string/question_one_d" />
            </RadioGroup>

            <TextView
                style="@style/textTheme"
                android:text="@string/question_two" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/button_2_a"
                    style="@style/buttonTheme"
                    android:text="@string/question_two_a" />

                <RadioButton
                    android:id="@+id/button_2_b"
                    style="@style/buttonTheme"
                    android:text="@string/question_two_b" />

                <RadioButton
                    android:id="@+id/button_2_c"
                    style="@style/buttonTheme"
                    android:text="@string/question_two_c" />

                <RadioButton
                    android:id="@+id/button_2_d"
                    style="@style/buttonTheme"
                    android:text="@string/question_two_d" />
            </RadioGroup>

            <TextView
                style="@style/textTheme"
                android:text="@string/question_three" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/button_3_a"
                    style="@style/buttonTheme"
                    android:text="@string/question_three_a" />

                <RadioButton
                    android:id="@+id/button_3_b"
                    style="@style/buttonTheme"
                    android:text="@string/question_three_b" />

                <RadioButton
                    android:id="@+id/button_3_c"
                    style="@style/buttonTheme"
                    android:text="@string/question_three_c" />

                <RadioButton
                    android:id="@+id/button_3_d"
                    style="@style/buttonTheme"
                    android:text="@string/question_three_d" />
            </RadioGroup>

            <TextView
                style="@style/textTheme"
                android:text="@string/question_type_two" />

            <TextView
                style="@style/textTheme"
                android:text="@string/question_four" />

            <CheckBox
                android:id="@+id/check_1_a"
                style="@style/buttonTheme"
                android:text="@string/question_four_a" />

            <CheckBox
                android:id="@+id/check_1_b"
                style="@style/buttonTheme"
                android:text="@string/question_four_b" />

            <CheckBox
                android:id="@+id/check_1_c"
                style="@style/buttonTheme"
                android:text="@string/question_four_c" />

            <CheckBox
                android:id="@+id/check_1_d"
                style="@style/buttonTheme"
                android:text="@string/question_four_d" />

            <TextView
                android:id="@+id/answer_text"
                style="@style/textTheme"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submit_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:onClick="onClickSubmit"
                android:text="@string/submit" />

            <Button
                android:id="@+id/answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:onClick="showAnswers"
                android:text="@string/correct_answer" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
